# LearnixOS

./: .gitignore  16bit.ld  32bit.ld  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs  i686-code32-stage3.json  linker.ld  rust-toolchain.toml  rustfmt.toml  stage_3.ld  test.sh
.cargo/: config.toml
.github/: FUNDING.yml
.zed/: settings.json
asm/: boot.s
bootloader/first_stage/: 16bit_target.json  Cargo.toml  build.rs
bootloader/first_stage/.cargo/: config.toml
bootloader/first_stage/asm/: boot.s  memory_map.s
bootloader/first_stage/src/: disk.rs  main.rs
bootloader/second_stage/: Cargo.toml  build.rs
bootloader/second_stage/.cargo/: config.toml
bootloader/second_stage/src/: main.rs
common/: Cargo.toml
common/src/: address_types.rs  lib.rs  macros.rs
common/src/constants/: addresses.rs  enums.rs  error.rs  mod.rs  (+1 more)
constants/src/: addresses.rs  enums.rs  lib.rs  values.rs
cpu_utils/: Cargo.toml
cpu_utils/src/: lib.rs  registers.rs
cpu_utils/src/registers/: cr3.rs  mod.rs
cpu_utils/src/screen/: color_code.rs  mod.rs  screen_char.rs
cpu_utils/src/structures/: global_descriptor_table.rs  macros.rs  mod.rs
cpu_utils/src/structures/allocators/: page_allocator.rs
cpu_utils/src/structures/paging/: address_types.rs  entry_flags.rs  error.rs  mod.rs  page_tables.rs
crates/common/: Cargo.toml  test.rs
crates/common/src/: address_types.rs  alloc.rs  bitmap.rs  iter.rs  late_init.rs  lib.rs  ring_buffer.rs  volatile.rs
crates/common/src/constants/: addresses.rs  mod.rs  values.rs
crates/common/src/enums/: ahci.rs  ata.rs  bios_interrupts.rs  buddy.rs  general.rs  global_descriptor_table.rs  interrupts.rs  keyboard.rs  paging.rs  vga.rs
crates/common/src/error/: ahci.rs  paging.rs
crates/cpu_utils/: Cargo.toml
crates/libk/: Cargo.toml
crates/macros/: Cargo.toml
crates/memory/page/: Cargo.toml
crates/memory/page/src/: arena.rs  lib.rs  map.rs  meta.rs
crates/sync/: Cargo.toml
enums/src/: lib.rs
first_stage/: 16bit.ld  16bit_target.json  Cargo.toml  build.rs
first_stage/asm/: boot.s
first_stage/src/: bios_enums.rs  constants.rs  disk.rs  enums.rs  global_descritor_table.rs  main.rs  mbr.rs  protected_mode.rs  screen.rs
kernel/: 64bit_target.json  Cargo.toml  build.rs  kernel.ld
kernel/.cargo/: config.toml
kernel/src/: interrupt_handlers.rs  main.rs  timer.rs
kernel/src/allocators/: bitmap.rs  free_list_allocator.rs  mod.rs  page_allocator.rs
kernel/src/allocators/heap_allocator/: allocator.rs
kernel/src/allocators/page_allocator/: address_type_extension.rs  allocator.rs  extension_traits.rs  mod.rs  paging_extension.rs
kernel/src/allocators/page_allocator/ext_traits/: address_type_extension.rs  bitmap_extension.rs  mod.rs  paging_extension.rs
kernel/src/drivers/: interrupt_handlers.rs  keyboard.rs  mod.rs  pci.rs  pic8259.rs  timer.rs
kernel/src/drivers/ata/ahci/: fis.rs  hba.rs  mod.rs
kernel/src/drivers/keyboard/: keyboard.rs  mod.rs
kernel/src/drivers/vga_display/: art.rs  color_code.rs  mod.rs  screen_char.rs  writer.rs
kernel/src/memory/: bitmap.rs  memory_map.rs  mod.rs  page.rs  page_descriptor.rs  unassigned.rs
kernel/src/memory/allocators/: buddy.rs  extensions.rs  free_list_allocator.rs  mod.rs  slab.rs  slab_allocator.rs
kernel/src/memory/allocators/buddy/: meta.rs
kernel/src/memory/allocators/page_allocator/: allocator.rs  buddy.rs  extension_traits.rs  extensions.rs  mod.rs
kernel/src/memory/allocators/slab/: cache.rs  descriptor.rs  macros.rs  traits.rs
kernel/src/memory/page/: map.rs  meta.rs
kernel/src/screen/: mod.rs
kernel/src/unit_tests/: mod.rs
kernel/stages/first_stage/: Cargo.toml  build.rs
kernel/stages/first_stage/asm/: boot.s  memory_map.s
kernel/stages/first_stage/src/: disk.rs  main.rs
kernel/stages/second_stage/: Cargo.toml  build.rs
kernel/stages/second_stage/src/: main.rs
learnix/: build.rs
learnix-macros/src/: flag.rs  lib.rs
second_stage/: 32bit.ld  Cargo.toml  build.rs
second_stage/src/: constants.rs  enums.rs  main.rs  mbr.rs  screen.rs
shared/common/: Cargo.toml
shared/common/src/: address_types.rs  bitmap.rs  lib.rs  macros.rs  ring_buffer.rs  volatile.rs
shared/common/src/constants/: addresses.rs  values.rs
shared/common/src/enums/: ahci.rs  ata.rs  bios_interrupts.rs  buddy.rs  cpuid.rs  general.rs  global_descriptor_table.rs  interrupts.rs  keyboard.rs  mod.rs  model_specific.rs  paging.rs  pci.rs  pic8259.rs  ports.rs  vga.rs
shared/common/src/error/: ahci.rs  general.rs  mod.rs  paging.rs  pci.rs
shared/common/src/vga_display/: writer.rs
shared/cpu_utils/: Cargo.toml
shared/cpu_utils/src/: lib.rs
shared/cpu_utils/src/instructions/: cpuid.rs  interrupts.rs  macros.rs  mod.rs  port.rs  tables.rs  tlb.rs
shared/cpu_utils/src/registers/: control.rs  general_purpose.rs  macros.rs  mod.rs  model_specific.rs  rflags.rs  segment.rs
shared/cpu_utils/src/structures/: global_descriptor_table.rs  interrupt_descriptor_table.rs  mbr.rs  mod.rs  segments.rs
shared/cpu_utils/src/structures/paging/: entry_flags.rs  init.rs  mod.rs  page_table.rs  page_table_entry.rs
snippets/: Cargo.toml
snippets/src/: book.rs  lib.rs  main.rs
snippets/src/book/: flag_macro_expand.rs  func.rs  panic.rs  print.rs  print_example.rs  static_uninit.rs  static_var.rs
snippets/src/book/ch01_01/: build.rs  mod.rs  panic.rs
snippets/src/book/ch01_02/: general.rs  mod.rs  print.rs
snippets/src/book/ch02_02/: enums.rs  flag_macro_expand.rs  mod.rs
snippets/src/book/ch02_03/: general.rs  invoke.rs  mask.rs  mod.rs  read.rs  write.rs
snippets/src/book/ch03_00/: mod.rs
src/: bios_enums.rs  constants.rs  disk.rs  global_descritor_table.rs  macros.rs  main.rs  protected_mode.rs  screen.rs
stages/first_stage/: Cargo.toml  build.rs
stages/second_stage/: Cargo.toml  build.rs
tests/: Cargo.toml
tests/src/: book.rs  buddy.rs  main.rs  test.rs
tests/src/book/: impl_ex.rs  minimal_main.rs  no_std.rs  static_str.rs  types.rs
utils/: Cargo.toml
utils/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+86 files in other folders)
