[workspace]

members = [
    "bootloader/first_stage",
    "bootloader/second_stage",
    "crates/arch/x86",
    "crates/common",
    "crates/macros",
    "crates/drivers/ahci",
    "crates/drivers/keyboard",
    "crates/drivers/pci",
    "crates/drivers/vga-display",
    "crates/memory/bump",
    "crates/memory/buddy",
    "crates/memory/slab",
    "crates/memory/page",
    "crates/libk",
    "kernel",
    "tests",
    "xtask", "crates/sync",
    # "snippets",
]

resolver = "2"
