[workspace]

members = [
    "bootloader/first_stage",
    "bootloader/second_stage",
    "crates/arch/x86",
    "crates/common",
    "crates/macros",
    # "crates/drivers/ahci",
    "crates/drivers/keyboard",
    # "crates/drivers/pci",
    "crates/drivers/vga-display",
    "crates/memory/bump",
    "crates/memory/buddy",
    # "crates/memory/slab",
    "crates/memory/page",
    "crates/sync",
    "crates/libk",
    "kernel",
    "tests",
    "xtask",
    # "snippets",
]

resolver = "2"

[profile.release]
opt-level = 's'
# overflow-checks = true
codegen-units = 1
panic = "abort"
