[package]
name = "snippets"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
num_enum = { git = "https://github.com/sagi21805/num_enum.git", rev = "2e53bd356ae93c537f3345f38679617bb977633c", default-features = false, features = [
    "complex-expressions",
] }
quote = "1.0.45"
syn = "2.0.117"
thiserror = "2.0.18"
