[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../crates/macros" }
num_enum = { git = "https://github.com/sagi21805/num_enum.git", default-features = false, features = [
    "complex-expressions",
] }
thiserror = { version = "2.0.12", default-features = false }
