[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
num_enum = { version = "0.7.5", default-features = false, features = [
    "complex-expressions",
] }
derive_more = { version = "2.0.1", default-features = false, features = [
    "full",
] }
strum_macros = { version = "0.27", default-features = false }
strum = { version = "0.27", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
macros = { path = "../macros" }
