[package]
name = "cpu_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
derive_more = { version = "2.0.1", default-features = false, features = [
    "full",
] }
thiserror = { version = "2.0.12", default-features = false }
extend = "1.2.0"

[features]
global_descriptor_table = []
interrupt_descriptor_table = []
master_boot_record = []
paging = []
linked_list = []

all = [
    "global_descriptor_table",
    "interrupt_descriptor_table",
    "master_boot_record",
    "paging",
    "linked_list",
]
