[package]
name = "page"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
x86 = { path = "../../arch/x86" }
buddy = { path = "../buddy" }
num_enum = { version = "0.7.5", default-features = false, features = [
    "complex-expressions",
] }
macros = { path = "../../macros" }
strum_macros = { version = "0.27", default-features = false }
strum = { version = "0.27", default-features = false }
