[package]
name = "page"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
x86 = { path = "../../arch/x86" }
buddy = { path = "../buddy" }
num_enum = { git = "https://github.com/sagi21805/num_enum.git", rev = "2e53bd356ae93c537f3345f38679617bb977633c", default-features = false, features = [
    "complex-expressions",
] }
macros = { path = "../../macros" }
strum_macros = { version = "0.27", default-features = false }
strum = { version = "0.27", default-features = false }
