[package]
name = "page"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
x86 = { path = "../../arch/x86" }
buddy = { path = "../buddy" }
num_enum = { git = "https://github.com/sagi21805/num_enum.git", default-features = false, features = [
    "complex-expressions",
] }
macros = { path = "../../macros" }
libk = { path = "../../libk" }
strum_macros = { version = "0.27", default-features = false }
strum = { version = "0.27", default-features = false }
extend = "1.2.0"
sync = { path = "../../sync" }
